[package]
name = "rentman-harvest"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = [
  "json",
] }
serde = { version = "1.0.210", features = [
  "derive",
] }
serde_json = "1.0.128"
tokio = { features = [
  "full",
], version = "1.40.0" }
