[package]
name = "rentman-harvest"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
  "charset",
  "http2",
  "macos-system-configuration",
] }
serde = { version = "1.0.210", features = [
  "derive",
] }
serde_json = "1.0.128"
tokio = { features = [
  "full",
], version = "1.40.0" }

[profile.release]
# opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*
